HW04: Рефакторинг структуры кода